--- a/XCode/DewertOkin/DewertOkin/RemoteControl/SecondRemote.storyboard
+++ b/XCode/DewertOkin/DewertOkin/RemoteControl/SecondRemote.storyboard
@@ -86,7 +86,7 @@
                                 </textAttributes>
                                 <items>
                                     <navigationItem title="Title" id="0Su-eo-Mwd">
-                                        <barButtonItem key="rightBarButtonItem" style="plain" id="y7d-0N-1kX">
+                                        <barButtonItem key="rightBarButtonItem" title="Item" id="y7d-0N-1kX">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="scI-cv-eGy">
                                                 <rect key="frame" x="364" y="7" width="30" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
