--- a/XCode/DewertOkin/DewertOkin/Devices/Devices.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Devices/Devices.storyboard
@@ -23,9 +23,10 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="CW4-LG-nsV"/>
                                 </constraints>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <items>
                                     <navigationItem title="Title" id="a7V-Oj-MQn">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="POB-DI-hET">
+                                        <barButtonItem key="leftBarButtonItem" title="Close" id="POB-DI-hET">
                                             <connections>
                                                 <action selector="unwindToRemoteViewController:" destination="2vF-NN-zR7" id="s6f-3R-EKE"/>
                                             </connections>
